ddwrt: introduce SshAuthSession and capture SSH welcome banner
Introduce SshAuthSession as the owner of an authenticated ClientSession and
persist the SSH welcome banner for later inspection.

Refactor SshRunner to execute commands via per-command channels without
closing the underlying session, enabling concurrent exec + log-follow
channels on the same session.

fix ballle98/openhab-addons#20

Signed-off-by: Lee Ballard <ballle98@gmail.com>